--- a/Nettside/nettside.css
+++ b/Nettside/nettside.css
@@ -6,9 +6,9 @@
     padding: 10px;
     background-color: pink;
     width: 100%;
-    }
-    
-    #hjem li {
+}
+
+#hjem li {
     display: block;
     width: 120px;
     height: 1em;
@@ -17,16 +17,30 @@
     margin-left: 2px;
     border: 1px solid #000;
     background-color: rgb(189, 226, 250);
-    }
-    
-    h1 {
+}
+
+h1 {
     position: absolute;
-    top: 230px;
+    top: 65px;
     left: 460px;
-    color: black;
-    }
-    
-    img {
+    color: lightskyblue;
+}
+
+img {
     height: 200px;
     width: 370px;
-    }
+}
+
+.start-video {
+    float: left;
+    width: 100%;
+}
+
+embed,
+iframe,
+object,
+video {
+    position: relative;
+    max-width: 100%;
+    top: 142px;
+}
